# lambda-discipline

./: CMakeLists.txt  README.md  SPEC_DRAFT.md  requirements.txt
docs/: SIGNATURE.md
editor-plugins/emacs/: README.md  lbd-inf-repl.el  lbd-mode.el
examples/: hello_world.lbd  if_then.lbd  ifthen.lbd  list.lbd  math_demos.lbd  pair.lbd  shapes.lbd  std.lbd  test.lbd
examples/aoc-24/day-01/: part_01.lbd  part_02.lbd
include/lbd/: cmd.h  error.h  exceptions.h  logs.h  options.h  repl.h  term.h
include/lbd/fe/: ast.h  lexer.h  loc.h  parser.h  token.h
include/lbd/intp/: builtins.h  interpreter.h  types.h
include/lbd/intp/builtin-modules/: builtin_module_core.h  builtin_module_io.h  builtin_module_list.h
include/lbd/utils/: string_escape.h  term.h
scripts/: dump_todo.py  setup.ps1  setup.sh
src/: cmd.cpp  main.cpp  repl.cpp
src/fe/: ast.cpp  lexer.cpp  loc.cpp  parser.cpp  token.cpp
src/intp/: builtins.cpp  buitlins.cpp  interpreter.cpp  types.cpp
src/intp/builtin-modules/: builtin_module_core.cpp  builtin_module_io.cpp  builtin_module_list.cpp
